# multicore-magic

./: .ocamlformat  CHANGES.md  README.md  dune-project  multicore-magic-dscheck.opam  multicore-magic-dscheck.opam.template  multicore-magic.opam  update-gh-pages-for-tag
.github/workflows/: workflow.yml
1.0.0/: index.html
1.0.0/multicore-magic/: index.html
1.0.0/multicore-magic/Multicore_magic/: index.html
1.0.1/multicore-magic/: index.html
2.0.0/multicore-magic/Multicore_magic/: index.html
2.1.0/multicore-magic/Multicore_magic/Transparent_atomic/: index.html
2.2.0/multicore-magic/: db.js  index.html
2.2.0/multicore-magic/Multicore_magic/: index.html
2.2.0/multicore-magic/Multicore_magic/Transparent_atomic/: index.html
2.3.0/multicore-magic/: db.js
2.3.0/multicore-magic-dscheck/: index.html
2.3.0/multicore-magic-dscheck/Multicore_magic_dscheck/: index.html
2.3.0/multicore-magic-dscheck/Multicore_magic_dscheck/Multicore_magic/Atomic_array/: index.html
2.3.0/multicore-magic-dscheck/Multicore_magic_dscheck/Multicore_magic/Transparent_atomic/: index.html
2.3.0/multicore-magic/Multicore_magic/: index.html
2.3.0/multicore-magic/Multicore_magic_atomic_array/: index.html
2.3.1/: index.html
2.3.1/multicore-magic/: index.html
2.3.1/multicore-magic-dscheck/Multicore_magic_dscheck/: index.html
2.3.1/multicore-magic-dscheck/Multicore_magic_dscheck/Multicore_magic/: index.html
2.3.1/multicore-magic-dscheck/Multicore_magic_dscheck/Multicore_magic/Transparent_atomic/: index.html
2.3.1/multicore-magic/Multicore_magic/Atomic_array/: index.html
2.3.1/multicore-magic/Multicore_magic_atomic_array/: index.html
doc/: index.html
doc/multicore-magic/: db.js  index.html
doc/multicore-magic-dscheck/: db.js  index.html
doc/multicore-magic-dscheck/Multicore_magic_dscheck/Multicore_magic/: index.html
doc/multicore-magic-dscheck/Multicore_magic_dscheck/Multicore_magic/Atomic_array/: index.html
doc/multicore-magic/Multicore_magic/: index.html
doc/multicore-magic/Multicore_magic/Atomic_array/: index.html
doc/multicore-magic/Multicore_magic/Transparent_atomic/: index.html
docs/: index.html
docs/multicore-magic/: index.html
docs/multicore-magic/Multicore_magic/: index.html
script/: common
src/: Multicore_magic.ml  Multicore_magic.mli  cache.1.ml  cache.16.ml  cache.32.ml  cache.8.ml  cache.mli  domain_id.noalloc.ml  domain_id.ocaml4.ml  domain_id.stdlib.ml  dune  index.ocaml4.ml  index.ocaml5.ml  multicore_magic.common.ml  padding.ml  transparent_atomic.ml
src/boxed5/: dune  multicore_magic_atomic_array.ml
src/dscheck/: dune  multicore_magic.ml  multicore_magic.mli  multicore_magic_atomic_array_dscheck.ml  multicore_magic_dscheck.ml  multicore_magic_dscheck.mli  transparent_atomic_dscheck.ml
src/main/: Multicore_magic.ml  Multicore_magic.mli
src/ocaml4/: dune  multicore_magic_atomic_array.ml
src/test/: Multicore_magic_test.ml  dune
src/unboxed5/: dune  multicore_magic_atomic_array.c  multicore_magic_atomic_array.ml
src/unboxed5_4/: dune  multicore_magic_atomic_array.js  multicore_magic_atomic_array.ml
test/: Multicore_magic_test.ml  dune  test_on_main_thread_only.ml  test_with_threads_and_domains.ml
