opam-version: "2.0"
version: "1.0.0"
synopsis: "Low-level multicore utilities for OCaml"
maintainer: "Vesa Karvonen <vesa.a.j.k@gmail.com>"
authors: "Vesa Karvonen"
license: "0BSD"
homepage: "https://github.com/ocaml-multicore/multicore-magic"
bug-reports: "https://github.com/ocaml-multicore/multicore-magic/issues"
dev-repo: "git+https://github.com/ocaml-multicore/multicore-magic.git"
depends: [
  "dune" {>= "3.3.0"}
  "ocaml" {>= "5.0.0"}
  "ocamlformat" {= "0.24.1" & with-test}
  "odoc" {>= "2.1.1" & with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
